--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,6 @@
-on: push
+on:
+  push:
+    branches: [ dev ]
 name: Build and deploy on push
 jobs:
   build:
@@ -9,6 +11,6 @@ jobs:
     - name: shalzz/zola-deploy-action
       uses: shalzz/zola-deploy-action@master
       env:
-        PAGES_BRANCH: gh-pages
+        PAGES_BRANCH: master
         BUILD_FLAGS: --drafts
         TOKEN: ${{ secrets.TOKEN }}
